# PR-PRG

./: CMakeLists.txt  README.md  TEST_spaceship.c  auxiliar.c  auxiliar.h  crew.c  crew.h  interface.c  interface.h  main.c  makefile  project.c  project.h  spaceship.c  spaceship.h  test.c  user.c  user.h  voyage.c  voyage.h
PR-PRG-JordiMain/: CMakeLists.txt  auxiliar.c  auxiliar.h  crew.c  crew.h  interface.c  interface.h  main.c  project.h  spaceship.c  test.c  voyage.c  voyage.h
PR-PRG-JordiMain/textFiles/: Crew.txt  Spaceships.txt  Voyages.txt  stock.txt
readData/: readData.c  readData.h
textFiles/: Crew.txt  Projects.txt  RegisterUser.txt  Spaceships.txt  archivo.txt  space.txt  stock.txt  voyages.txt
